--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "CodeGuardian using crewAI"
 authors = [{ name = "Aymen Mastouri", email = "aymen.mastouri@icloud.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]==1.5.0"
+    "chromadb>=1.1.1",
+    "crewai[tools]==1.5.0",
+    "litellm>=1.80.10",
+    "openai>=2.11.0",
+    "requests>=2.32.5",
+    "sentence-transformers>=5.2.0",
 ]
 
 [project.scripts]
