--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,69 @@
-.env
+# ======================
+# Python
+# ======================
 __pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# ======================
+# CrewAI / RAG / Cache
+# ======================
+.cache/
+content/
+.chroma/
+*.sqlite3
+*.db
+
+# Index metadata (generated)
+index.meta.json
+
+# ======================
+# Logs / Temp
+# ======================
+*.log
+*.tmp
+
+# ======================
+# OS
+# ======================
 .DS_Store
+Thumbs.db
+
+# ======================
+# IDEs
+# ======================
+.idea/
+.vscode/
+*.iml
+
+# ======================
+# Environment files
+# ======================
+.env
+.env.*
+!.env.example
+
+# ======================
+# Build / Dist
+# ======================
+build/
+dist/
+*.egg-info/
+
+# ======================
+# Test / Coverage
+# ======================
+.coverage
+htmlcov/
+.pytest_cache/
+
+# ======================
+# uv
+# ======================
+.uv/
