update .env template

--- a/.env.template
+++ b/.env.template
@@ -1,50 +1,39 @@
-# Bugsmith Configuration
-# ======================
+# =============================================================================
+# Codeguardian Production Configuration
+# =============================================================================
 
-# PROJECT STRUCTURE CONFIGURATION
-# Choose ONE of the following approaches:
+# =============================================================================
+# Project Structure Configuration
+# =============================================================================
+PROJECT_PATH=C:\project-backend
+INPUTS_PATH=C:\inputs
+BUG_DESC_FILE=bug-desc.txt
+BUG_LOG_FILE=bug-log.txt
+# =============================================================================
+# AI Model Configuration
+# =============================================================================
+# Primary LLM for CrewAI agents
+MODEL=openai/kaitchup/Llama-3.3-70B-Instruct-AutoRound-GPTQ-4bit
+API_BASE=http://bmf-ai.apps.ce.capgemini.com/chat/v1
+OPENAI_API_KEY=test
 
-# Option 1: Root project with backend/frontend folders (auto-detection)
-ROOT_REPO_PATH=C:/my-project
+# Local embeddings via Ollama (for semantic search)
+OLLAMA_BASE_URL=http://localhost:11434
+EMBED_MODEL=nomic-embed-text:latest
 
-# Option 2: Specify individual paths
-# TARGET_BACKEND_PATH=C:/my-project/backend
-# TARGET_FRONTEND_PATH=C:/my-project/frontend
+CHROMA_DIR=C:\projects\codeguardian\.cache\.chroma
 
-# Option 3: Single project (no backend/frontend structure)
-# ROOT_REPO_PATH=C:/my-single-project
+FORCE_REINDEX=0
+AUTO_INDEX_NO_GIT=0
 
-# BUGS CONFIGURATION
-BUGS_DIR=C:/gencure/bugs
+INDEX_MAX_FILES_BACKEND=4000
+INDEX_MAX_FILES_FRONTEND=4000
+INDEX_LOCK_TIMEOUT_S=300
 
-# INDEXING CONFIGURATION
-EMBEDDINGS_DB_PATH=./data/embeddings.db
 
-# LLM CONFIGURATION (Remote)
-API_BASE=http://your-remote-llm-server:port
-OPENAI_API_KEY=your-api-key-here
-MODEL=llama-3.3-70b-versatile
+# optional tuning:
+CHUNK_CHARS=1800
+CHUNK_OVERLAP=200
+MAX_FILE_BYTES=2000000
 
-# SSL CONFIGURATION (for corporate networks)
-PYTHONHTTPSVERIFY=0
-CURL_CA_BUNDLE=
-REQUESTS_CA_BUNDLE=
 
-# PROJECT STRUCTURE EXAMPLES:
-# ===========================
-
-# Full-Stack Project:
-# ROOT_REPO_PATH=C:/my-fullstack-app
-# (Will auto-detect C:/my-fullstack-app/backend and C:/my-fullstack-app/frontend)
-
-# Backend Only:
-# TARGET_BACKEND_PATH=C:/my-backend-api
-# (Or ROOT_REPO_PATH=C:/my-project with only backend/ folder)
-
-# Frontend Only:
-# TARGET_FRONTEND_PATH=C:/my-react-app
-# (Or ROOT_REPO_PATH=C:/my-project with only frontend/ folder)
-
-# Single Project:
-# ROOT_REPO_PATH=C:/my-monolith-app
-# (No backend/frontend folders - entire project as one unit)
