--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "openai>=2.11.0",
     "requests>=2.32.5",
     "sentence-transformers>=5.2.0",
+    "ollama==0.4.5",
 ]
 
 [project.scripts]
@@ -27,3 +28,8 @@ build-backend = "hatchling.build"
 
 [tool.crewai]
 type = "crew"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
